# ppg-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONDUCTOR.md  CONTRIBUTING.md  DASHBOARD_PLAN.md  LICENSE  README.md  SECURITY.md  appcast.xml  features-findings.md  node_modules  package-lock.json  package.json  performance-findings.md  tsconfig.json  tsup.config.ts  ui-findings.md  vision.md
.claude-plugin/: marketplace.json  plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.pg/: config.yaml
.pg/templates/: default.md
PPG CLI/PPG CLI/: AgentConfigView.swift  AgentVariant.swift  AppDelegate.swift  AppSettingsManager.swift  ClaudeMdEditorView.swift  CommandPalettePanel.swift  CommitHeatmapView.swift  ContentTabViewController.swift  CronParser.swift  DashboardSession.swift  DashboardSplitViewController.swift  FeedbackViewController.swift  HomeDashboardView.swift  Info.plist  KeybindingManager.swift  (+20 more)
PPG CLI/PPG CLI.xcodeproj/: project.pbxproj
ios/: .gitignore
linux/: Cargo.toml  README.md
linux/src/: app.rs  main.rs  state.rs  style.css
linux/src/api/: client.rs  websocket.rs
linux/src/models/: agent_variant.rs  manifest.rs  mod.rs  settings.rs
linux/src/ui/: command_palette.rs  home_dashboard.rs  mod.rs  pane_grid.rs  settings_dialog.rs  setup_view.rs  sidebar.rs  terminal_pane.rs  window.rs  worktree_detail.rs
linux/src/util/: shell.rs
marketing/: package.json  pnpm-lock.yaml
src/: cli.ts  test-fixtures.ts
windows/: PPGDesktop.sln  download-xterm.ps1
(+253 files in other folders)
