[package]
name = "ppg-desktop"
version = "0.1.0"
edition = "2021"
description = "PPG Desktop — Native Linux GUI for PPG agent orchestration"
license = "MIT"
rust-version = "1.78"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_5"] }
glib = "0.20"
gio = "0.20"
cairo-rs = { version = "0.20", features = ["v1_16"] }
pango = "0.20"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
log = "0.4"
env_logger = "0.11"
anyhow = "1"
async-channel = "2"

[profile.release]
opt-level = 3
lto = true
strip = true
